--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,13 +19,13 @@ services:
   
   web:
     build: ./proj
-    command: bash -c "alembic upgrade head && gunicorn app.main:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:8080"
+    command: bash -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8080"
     volumes:
       - ./proj:/usr/src/app
     expose:
       - 8080
     # ports:
-    #   - "8000:8000"
+    #   - "8080:8080"
     environment:
       - DATABASE_URL=postgresql+asyncpg://smsapiuser:smsapipassword@db:5432/smsapi
     depends_on:
